// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Accordion] render test should adjust duration of animation depends on animDuration props value 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "overflow": "hidden",
            "transform": Array [],
            "width": 300,
          }
        }
      >
        <
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#141414",
                "borderBottomColor": "white",
                "borderBottomWidth": 1,
                "flexDirection": "row",
                "height": 50,
                "zIndex": 10,
              },
            ]
          }
          testID="title_0"
        >
          <Text>
            Defualt-title-01
          </Text>
          <View
            style={
              Object {
                "position": "absolute",
                "right": 20,
                "transform": Array [
                  Object {
                    "rotate": "0deg",
                  },
                ],
              }
            }
          />
        </>
        <View
          style={
            Object {
              "height": undefined,
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
          testID="body_0"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "lightgray",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "paddingBottom": 20,
                  "paddingLeft": 40,
                  "paddingRight": 40,
                  "paddingTop": 20,
                  "width": "100%",
                },
              ]
            }
          >
            <Text>
              Default body01
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "lightgray",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "paddingBottom": 20,
                  "paddingLeft": 40,
                  "paddingRight": 40,
                  "paddingTop": 20,
                  "width": "100%",
                },
              ]
            }
          >
            <Text>
              Default body02
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "overflow": "hidden",
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
            "width": 300,
          }
        }
      >
        <
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#141414",
                "borderBottomColor": "white",
                "borderBottomWidth": 1,
                "flexDirection": "row",
                "height": 50,
                "zIndex": 10,
              },
            ]
          }
          testID="title_1"
        >
          <Text>
            Defualt-title-02
          </Text>
          <View
            style={
              Object {
                "position": "absolute",
                "right": 20,
                "transform": Array [
                  Object {
                    "rotate": "0deg",
                  },
                ],
              }
            }
          />
        </>
        <View
          style={
            Object {
              "height": undefined,
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
          testID="body_1"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "lightgray",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "paddingBottom": 20,
                  "paddingLeft": 40,
                  "paddingRight": 40,
                  "paddingTop": 20,
                  "width": "100%",
                },
              ]
            }
          >
            <Text>
              Default body01
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "lightgray",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "paddingBottom": 20,
                  "paddingLeft": 40,
                  "paddingRight": 40,
                  "paddingTop": 20,
                  "width": "100%",
                },
              ]
            }
          >
            <Text>
              Default body02
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Accordion] render test should operate animation when isAnimated props is true 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "overflow": "hidden",
            "transform": Array [],
            "width": 300,
          }
        }
      >
        <
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#141414",
                "borderBottomColor": "white",
                "borderBottomWidth": 1,
                "flexDirection": "row",
                "height": 50,
                "zIndex": 10,
              },
            ]
          }
          testID="title_0"
        >
          <Text>
            Defualt-title-01
          </Text>
          <View
            style={
              Object {
                "position": "absolute",
                "right": 20,
                "transform": Array [
                  Object {
                    "rotate": "180deg",
                  },
                ],
              }
            }
          />
        </>
        <View
          style={
            Object {
              "height": undefined,
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
          testID="body_0"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "lightgray",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "paddingBottom": 20,
                  "paddingLeft": 40,
                  "paddingRight": 40,
                  "paddingTop": 20,
                  "width": "100%",
                },
              ]
            }
          >
            <Text>
              Default body01
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "lightgray",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "paddingBottom": 20,
                  "paddingLeft": 40,
                  "paddingRight": 40,
                  "paddingTop": 20,
                  "width": "100%",
                },
              ]
            }
          >
            <Text>
              Default body02
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "overflow": "hidden",
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
            "width": 300,
          }
        }
      >
        <
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#141414",
                "borderBottomColor": "white",
                "borderBottomWidth": 1,
                "flexDirection": "row",
                "height": 50,
                "zIndex": 10,
              },
            ]
          }
          testID="title_1"
        >
          <Text>
            Defualt-title-02
          </Text>
          <View
            style={
              Object {
                "position": "absolute",
                "right": 20,
                "transform": Array [
                  Object {
                    "rotate": "180deg",
                  },
                ],
              }
            }
          />
        </>
        <View
          style={
            Object {
              "height": undefined,
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
          testID="body_1"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "lightgray",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "paddingBottom": 20,
                  "paddingLeft": 40,
                  "paddingRight": 40,
                  "paddingTop": 20,
                  "width": "100%",
                },
              ]
            }
          >
            <Text>
              Default body01
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "lightgray",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "paddingBottom": 20,
                  "paddingLeft": 40,
                  "paddingRight": 40,
                  "paddingTop": 20,
                  "width": "100%",
                },
              ]
            }
          >
            <Text>
              Default body02
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Accordion] render test should render collapsed when collapseOnStart props is true 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "overflow": "hidden",
            "transform": Array [],
            "width": 300,
          }
        }
      >
        <
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#141414",
                "borderBottomColor": "white",
                "borderBottomWidth": 1,
                "flexDirection": "row",
                "height": 50,
                "zIndex": 10,
              },
            ]
          }
          testID="title_0"
        >
          <Text>
            Defualt-title-01
          </Text>
          <View
            style={
              Object {
                "position": "absolute",
                "right": 20,
                "transform": Array [
                  Object {
                    "rotate": "0deg",
                  },
                ],
              }
            }
          />
        </>
        <View
          style={
            Object {
              "height": undefined,
              "transform": Array [
                Object {
                  "translateY": -1,
                },
              ],
            }
          }
          testID="body_0"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "lightgray",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "paddingBottom": 20,
                  "paddingLeft": 40,
                  "paddingRight": 40,
                  "paddingTop": 20,
                  "width": "100%",
                },
              ]
            }
          >
            <Text>
              Default body01
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "lightgray",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "paddingBottom": 20,
                  "paddingLeft": 40,
                  "paddingRight": 40,
                  "paddingTop": 20,
                  "width": "100%",
                },
              ]
            }
          >
            <Text>
              Default body02
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "overflow": "hidden",
            "transform": Array [
              Object {
                "translateY": -1,
              },
            ],
            "width": 300,
          }
        }
      >
        <
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#141414",
                "borderBottomColor": "white",
                "borderBottomWidth": 1,
                "flexDirection": "row",
                "height": 50,
                "zIndex": 10,
              },
            ]
          }
          testID="title_1"
        >
          <Text>
            Defualt-title-02
          </Text>
          <View
            style={
              Object {
                "position": "absolute",
                "right": 20,
                "transform": Array [
                  Object {
                    "rotate": "0deg",
                  },
                ],
              }
            }
          />
        </>
        <View
          style={
            Object {
              "height": undefined,
              "transform": Array [
                Object {
                  "translateY": -1,
                },
              ],
            }
          }
          testID="body_1"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "lightgray",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "paddingBottom": 20,
                  "paddingLeft": 40,
                  "paddingRight": 40,
                  "paddingTop": 20,
                  "width": "100%",
                },
              ]
            }
          >
            <Text>
              Default body01
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "lightgray",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "paddingBottom": 20,
                  "paddingLeft": 40,
                  "paddingRight": 40,
                  "paddingTop": 20,
                  "width": "100%",
                },
              ]
            }
          >
            <Text>
              Default body02
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Accordion] render test should render without crasing 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "overflow": "hidden",
            "transform": Array [],
            "width": 300,
          }
        }
      >
        <
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#141414",
                "borderBottomColor": "white",
                "borderBottomWidth": 1,
                "flexDirection": "row",
                "height": 50,
                "zIndex": 10,
              },
            ]
          }
          testID="title_0"
        >
          <Text>
            Defualt-title-01
          </Text>
          <View
            style={
              Object {
                "position": "absolute",
                "right": 20,
                "transform": Array [
                  Object {
                    "rotate": "0deg",
                  },
                ],
              }
            }
          />
        </>
        <View
          style={
            Object {
              "height": undefined,
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
          testID="body_0"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "lightgray",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "paddingBottom": 20,
                  "paddingLeft": 40,
                  "paddingRight": 40,
                  "paddingTop": 20,
                  "width": "100%",
                },
              ]
            }
          >
            <Text>
              Default body01
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "lightgray",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "paddingBottom": 20,
                  "paddingLeft": 40,
                  "paddingRight": 40,
                  "paddingTop": 20,
                  "width": "100%",
                },
              ]
            }
          >
            <Text>
              Default body02
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "overflow": "hidden",
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
            "width": 300,
          }
        }
      >
        <
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#141414",
                "borderBottomColor": "white",
                "borderBottomWidth": 1,
                "flexDirection": "row",
                "height": 50,
                "zIndex": 10,
              },
            ]
          }
          testID="title_1"
        >
          <Text>
            Defualt-title-02
          </Text>
          <View
            style={
              Object {
                "position": "absolute",
                "right": 20,
                "transform": Array [
                  Object {
                    "rotate": "0deg",
                  },
                ],
              }
            }
          />
        </>
        <View
          style={
            Object {
              "height": undefined,
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
            }
          }
          testID="body_1"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "lightgray",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "paddingBottom": 20,
                  "paddingLeft": 40,
                  "paddingRight": 40,
                  "paddingTop": 20,
                  "width": "100%",
                },
              ]
            }
          >
            <Text>
              Default body01
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "lightgray",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "paddingBottom": 20,
                  "paddingLeft": 40,
                  "paddingRight": 40,
                  "paddingTop": 20,
                  "width": "100%",
                },
              ]
            }
          >
            <Text>
              Default body02
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
